--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav ul li a:hover { color: #fff; }
 }
 
 .hero-content p {
-    font-family: 'Pirata One', system-ui;
+    font-family: 'Inter', system-ui;
     font-size: clamp(50px, 12vw, 150px);
     color: #B22222;
     display: inline-block;
