--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ nav ul li a:hover { color: #fff; }
 .hero-content p {
     font-family: 'Inter', sans-serif;
     font-size: clamp(25px, 12vw, 100px);
-    color: #B22222;
+    color: #fff;
     display: inline-block;
     transform: scale(1, 1); /* Angka 0.8 adalah lebar, 1.4 adalah tinggi */
 
