--- a/style.css
+++ b/style.css
@@ -72,8 +72,19 @@ nav ul li a:hover { color: #fff; }
    ========================================== */
 .background-container {
     position: fixed;
-    top: 0; left: 0; width: 100vw; height: 100vh;
+    top: 0; 
+    left: 0; 
+    width: 100vw; 
+    height: 100vh;
     z-index: 1;
+}
+
+.mySlides {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .mySlides img {
@@ -89,7 +100,9 @@ nav ul li a:hover { color: #fff; }
     filter: brightness(50%); /* (Opsional) Menggelapkan gambar agar teks hero terbaca */
 }
 
-.mySlides.active { opacity: 1; }
+.mySlides.active { 
+    opacity: 1; 
+}
 
 .hero-content {
     position: absolute;
